<resources>
    <string name="app_name">Ch6_view</string>
    <string name="applockdoesnt">어플 잠금이 실행 중이지 않아요</string>
    <string name="applockda">APP LOCK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // community resource

    // login, sign resource
    <string name="login_sign_title_text">스터디플래너</string>
    <string name="login_id_edittext">아이디</string>
    <string name="login_password_edittext">비밀번호</string>
    <string name="login_login_button">로그인</string>
    <string name="login_sign_button">회원가입</string>
    <string name="sign_id_text">아이디</string>
    <string name="sign_check_button">중복확인</string>
    <string name="sign_sign_button">가입하기</string>
    <string name="sign_name_text">이름</string>
    <string name="sign_passord_text">비밀번호</string>
    <string name="sign_password_check_text">비밀번호 확인</string>

</resources>


